[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://addons/dialogic/Events/Glossary/settings_glossary.gd" id="1_tf3p1"]
[ext_resource type="StyleBox" uid="uid://dmsjhgv22dns8" path="res://addons/dialogic/Editor/Common/TitleBgStylebox.tres" id="2_kj6gm"]

[sub_resource type="Image" id="Image_ruhry"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_mi8la"]
image = SubResource("Image_ruhry")

[node name="GlossaryEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_tf3p1")

[node name="Entries" type="HBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="VBoxContainer" parent="Entries"]
offset_right = 371.0
offset_bottom = 600.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Entries/Settings"]
offset_right = 371.0
offset_bottom = 36.0
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_kj6gm")
text = "Glossary Settings"

[node name="DefColor" type="HBoxContainer" parent="Entries/Settings"]
offset_top = 40.0
offset_right = 371.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="Entries/Settings/DefColor"]
offset_right = 317.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Default color"

[node name="DefaultColor" type="ColorPickerButton" parent="Entries/Settings/DefColor"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
offset_left = 321.0
offset_right = 371.0
offset_bottom = 26.0
size_flags_horizontal = 8

[node name="DefCaseSensitive" type="HBoxContainer" parent="Entries/Settings"]
offset_top = 70.0
offset_right = 371.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="Entries/Settings/DefCaseSensitive"]
offset_right = 343.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Default case sensitive"

[node name="DefaultCaseSensitive" type="CheckBox" parent="Entries/Settings/DefCaseSensitive"]
unique_name_in_owner = true
offset_left = 347.0
offset_right = 371.0
offset_bottom = 26.0

[node name="FileList" type="VBoxContainer" parent="Entries/Settings"]
offset_top = 100.0
offset_right = 371.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.69

[node name="HBox" type="HBoxContainer" parent="Entries/Settings/FileList"]
offset_right = 371.0
offset_bottom = 36.0

[node name="Title2" type="Label" parent="Entries/Settings/FileList/HBox"]
offset_right = 218.0
offset_bottom = 36.0
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_kj6gm")
text = "Active Files"

[node name="LoadGlossaryFile" type="Button" parent="Entries/Settings/FileList/HBox"]
unique_name_in_owner = true
offset_left = 222.0
offset_right = 284.0
offset_bottom = 36.0
text = "Load"
icon = SubResource("ImageTexture_mi8la")

[node name="AddGlossaryFile" type="Button" parent="Entries/Settings/FileList/HBox"]
unique_name_in_owner = true
offset_left = 288.0
offset_right = 343.0
offset_bottom = 36.0
text = "Add"
icon = SubResource("ImageTexture_mi8la")

[node name="DeleteGlossaryFile" type="Button" parent="Entries/Settings/FileList/HBox"]
unique_name_in_owner = true
offset_left = 347.0
offset_right = 371.0
offset_bottom = 36.0
icon = SubResource("ImageTexture_mi8la")

[node name="ScrollContainer" type="ScrollContainer" parent="Entries/Settings/FileList"]
offset_top = 40.0
offset_right = 371.0
offset_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GlossaryList" type="ItemList" parent="Entries/Settings/FileList/ScrollContainer"]
unique_name_in_owner = true
offset_right = 371.0
offset_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="Entries"]
offset_left = 375.0
offset_right = 379.0
offset_bottom = 600.0

[node name="EntryList" type="VBoxContainer" parent="Entries"]
offset_left = 383.0
offset_right = 640.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.69

[node name="HBox" type="HBoxContainer" parent="Entries/EntryList"]
offset_right = 257.0
offset_bottom = 36.0

[node name="Title3" type="Label" parent="Entries/EntryList/HBox"]
offset_right = 125.0
offset_bottom = 36.0
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_kj6gm")
text = "Entries"

[node name="AddGlossaryEntry" type="Button" parent="Entries/EntryList/HBox"]
unique_name_in_owner = true
offset_left = 129.0
offset_right = 229.0
offset_bottom = 36.0
text = "Add Entry"
icon = SubResource("ImageTexture_mi8la")

[node name="DeleteGlossaryEntry" type="Button" parent="Entries/EntryList/HBox"]
unique_name_in_owner = true
offset_left = 233.0
offset_right = 257.0
offset_bottom = 36.0
icon = SubResource("ImageTexture_mi8la")

[node name="ScrollContainer" type="ScrollContainer" parent="Entries/EntryList"]
offset_top = 40.0
offset_right = 257.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntryList" type="ItemList" parent="Entries/EntryList/ScrollContainer"]
unique_name_in_owner = true
offset_right = 257.0
offset_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="Entries"]
offset_left = 644.0
offset_right = 648.0
offset_bottom = 600.0

[node name="EntryEditor" type="ScrollContainer" parent="Entries"]
offset_left = 652.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
horizontal_scroll_mode = 0
metadata/_edit_layout_mode = 1

[node name="VBox" type="VBoxContainer" parent="Entries/EntryEditor"]
offset_right = 372.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntryEditorTitle" type="Label" parent="Entries/EntryEditor/VBox"]
unique_name_in_owner = true
offset_right = 372.0
offset_bottom = 36.0
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_kj6gm")
text = "Entries"

[node name="EntrySettings" type="GridContainer" parent="Entries/EntryEditor/VBox"]
unique_name_in_owner = true
offset_top = 40.0
offset_right = 372.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 13
columns = 2

[node name="Label2" type="Label" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_right = 94.0
offset_bottom = 26.0
size_flags_vertical = 0
text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_left = 107.0
offset_right = 372.0
offset_bottom = 31.0

[node name="EntryName" type="LineEdit" parent="Entries/EntryEditor/VBox/EntrySettings/HBoxContainer"]
unique_name_in_owner = true
offset_right = 87.7656
offset_bottom = 31.0
size_flags_horizontal = 0
placeholder_text = "MyEntry"
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="EntryCaseSensitive" type="CheckBox" parent="Entries/EntryEditor/VBox/EntrySettings/HBoxContainer"]
unique_name_in_owner = true
offset_left = 91.0
offset_right = 228.0
offset_bottom = 31.0
text = "Case sensitive"

[node name="Label3" type="Label" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_top = 35.0
offset_right = 94.0
offset_bottom = 61.0
size_flags_vertical = 0
text = "Alternatives"

[node name="EntryAlternatives" type="LineEdit" parent="Entries/EntryEditor/VBox/EntrySettings"]
unique_name_in_owner = true
offset_left = 107.0
offset_top = 35.0
offset_right = 372.0
offset_bottom = 66.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label4" type="Label" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_top = 70.0
offset_right = 94.0
offset_bottom = 96.0
size_flags_vertical = 0
text = "Title"

[node name="EntryTitle" type="LineEdit" parent="Entries/EntryEditor/VBox/EntrySettings"]
unique_name_in_owner = true
offset_left = 107.0
offset_top = 70.0
offset_right = 372.0
offset_bottom = 101.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label5" type="Label" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_top = 105.0
offset_right = 94.0
offset_bottom = 131.0
size_flags_vertical = 0
text = "Text"

[node name="EntryText" type="TextEdit" parent="Entries/EntryEditor/VBox/EntrySettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
offset_left = 107.0
offset_top = 105.0
offset_right = 372.0
offset_bottom = 205.0
focus_next = NodePath("../EntryExtra")
wrap_mode = 1

[node name="Label6" type="Label" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_top = 209.0
offset_right = 94.0
offset_bottom = 235.0
size_flags_vertical = 0
text = "Extra"

[node name="EntryExtra" type="TextEdit" parent="Entries/EntryEditor/VBox/EntrySettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
offset_left = 107.0
offset_top = 209.0
offset_right = 372.0
offset_bottom = 259.0
wrap_mode = 1

[node name="Label8" type="Label" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_top = 263.0
offset_right = 94.0
offset_bottom = 289.0
size_flags_vertical = 0
text = "Enabled"

[node name="EntryEnabled" type="CheckBox" parent="Entries/EntryEditor/VBox/EntrySettings"]
unique_name_in_owner = true
offset_left = 107.0
offset_top = 263.0
offset_right = 372.0
offset_bottom = 289.0
button_pressed = true

[node name="Label7" type="Label" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_top = 293.0
offset_right = 94.0
offset_bottom = 319.0
size_flags_vertical = 0
text = "Color"

[node name="HBox" type="HBoxContainer" parent="Entries/EntryEditor/VBox/EntrySettings"]
offset_left = 107.0
offset_top = 293.0
offset_right = 372.0
offset_bottom = 319.0

[node name="EntryCustomColor" type="CheckBox" parent="Entries/EntryEditor/VBox/EntrySettings/HBox"]
unique_name_in_owner = true
offset_right = 24.0
offset_bottom = 26.0

[node name="EntryColor" type="ColorPickerButton" parent="Entries/EntryEditor/VBox/EntrySettings/HBox"]
unique_name_in_owner = true
offset_left = 28.0
offset_right = 265.0
offset_bottom = 26.0
size_flags_horizontal = 3

[connection signal="pressed" from="Entries/Settings/FileList/HBox/LoadGlossaryFile" to="." method="_on_load_glossary_file_pressed"]
[connection signal="pressed" from="Entries/Settings/FileList/HBox/AddGlossaryFile" to="." method="_on_add_glossary_file_pressed"]
[connection signal="pressed" from="Entries/Settings/FileList/HBox/DeleteGlossaryFile" to="." method="_on_delete_glossary_file_pressed"]
[connection signal="pressed" from="Entries/EntryList/HBox/AddGlossaryEntry" to="." method="_on_add_glossary_entry_pressed"]
[connection signal="pressed" from="Entries/EntryList/HBox/DeleteGlossaryEntry" to="." method="_on_delete_glossary_entry_pressed"]
[connection signal="text_changed" from="Entries/EntryEditor/VBox/EntrySettings/HBoxContainer/EntryName" to="." method="_on_entry_name_text_changed"]
[connection signal="toggled" from="Entries/EntryEditor/VBox/EntrySettings/HBoxContainer/EntryCaseSensitive" to="." method="_on_entry_case_sensitive_toggled"]
[connection signal="text_changed" from="Entries/EntryEditor/VBox/EntrySettings/EntryAlternatives" to="." method="_on_entry_alternatives_text_changed"]
[connection signal="text_changed" from="Entries/EntryEditor/VBox/EntrySettings/EntryTitle" to="." method="_on_entry_title_text_changed"]
[connection signal="text_changed" from="Entries/EntryEditor/VBox/EntrySettings/EntryText" to="." method="_on_entry_text_text_changed"]
[connection signal="text_changed" from="Entries/EntryEditor/VBox/EntrySettings/EntryExtra" to="." method="_on_entry_extra_text_changed"]
[connection signal="toggled" from="Entries/EntryEditor/VBox/EntrySettings/EntryEnabled" to="." method="_on_entry_enabled_toggled"]
[connection signal="toggled" from="Entries/EntryEditor/VBox/EntrySettings/HBox/EntryCustomColor" to="." method="_on_entry_custom_color_toggled"]
[connection signal="color_changed" from="Entries/EntryEditor/VBox/EntrySettings/HBox/EntryColor" to="." method="_on_entry_color_color_changed"]
